kubernetes-services/additions/argo-cd/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-cd-server
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway/non-tls-gateway
  http:
    - match:
        - uri:
            prefix: /argocd/
        - uri:
            exact: /argocd
      route:
        - destination:
            host: argo-cd-argocd-server
            port:
              number: 80
